--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
-astroid==2.0.4
-flake8==3.5.0
-isort==4.3.4
-lazy-object-proxy==1.3.1
-Markdown==2.6.11
+astroid==2.3.2
+entrypoints==0.3
+flake8==3.7.8
+isort==4.3.21
+lazy-object-proxy==1.4.2
+Markdown==3.1.1
 mccabe==0.6.1
-pycodestyle==2.3.1
-pyflakes==1.6.0
-pylint==2.1.1
-PyYAML==5.1
-six==1.11.0
-wrapt==1.10.11
+pycodestyle==2.5.0
+pyflakes==2.1.1
+pylint==2.4.3
+PyYAML==5.1.2
+six==1.12.0
+typed-ast==1.4.0
+wrapt==1.11.2
