--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 astroid==2.3.2
+autopep8==1.4.4
 entrypoints==0.3
 flake8==3.7.8
+htmlmin==0.1.12
 isort==4.3.21
 lazy-object-proxy==1.4.2
+libsass==0.19.3
 Markdown==3.1.1
 mccabe==0.6.1
 pycodestyle==2.5.0
