--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
 astroid==2.3.3
-autopep8==1.4.4
+autopep8==1.5
 entrypoints==0.3
 flake8==3.7.9
 htmlmin==0.1.12
 isort==4.3.21
 lazy-object-proxy==1.4.3
 libsass==0.19.4
-Markdown==3.1.1
+Markdown==3.2.1
 mccabe==0.6.1
 pycodestyle==2.5.0
 pyflakes==2.1.1
 pylint==2.4.4
 PyYAML==5.3
-six==1.13.0
-typed-ast==1.4.0
+six==1.14.0
+typed-ast==1.4.1
 wrapt==1.11.2
+yapf==0.29.0
