--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,21 @@
-astroid==2.3.3
-autopep8==1.5
+astroid==2.4.1
+autopep8==1.5.2
 entrypoints==0.3
 flake8==3.7.9
 htmlmin==0.1.12
+importlib-metadata==1.6.0
 isort==4.3.21
 lazy-object-proxy==1.4.3
-libsass==0.19.4
-Markdown==3.2.1
+libsass==0.20.0
+Markdown==3.2.2
 mccabe==0.6.1
 pycodestyle==2.5.0
-pyflakes==2.1.1
-pylint==2.4.4
-PyYAML==5.3
+pyflakes==2.2.0
+pylint==2.5.2
+PyYAML==5.3.1
 six==1.14.0
+toml==0.10.0
 typed-ast==1.4.1
-wrapt==1.11.2
-yapf==0.29.0
+wrapt==1.12.1
+yapf==0.30.0
+zipp==3.1.0
